chore: add flyway migration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,27 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: taeuk0623
       POSTGRES_DB: postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  flyway-migrate:
+    image: flyway/flyway:latest
+    container_name: flyway-migrate
+    depends_on:
+      postgres-db:
+        condition: service_healthy
+    command: migrate
+    volumes:
+      - ./db/migrations:/flyway/sql
+    environment:
+      FLYWAY_URL: jdbc:postgresql://postgres-db:5432/postgres
+      FLYWAY_USER: postgres
+      FLYWAY_PASSWORD: taeuk0623
+    networks:
+      - rag-base-network
 
   qdrant-db:
     image: qdrant/qdrant:latest
