--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
