--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-pdf": "^10.2.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
